--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>码上云建站</title>
+    <title>zerocmf</title>
     <link rel="icon" href="//img.alicdn.com/imgextra/i2/O1CN01lNWGJi1xflgRfSgbk_!!6000000006471-55-tps-22-26.svg">
     <link href="./css/index.css" rel="stylesheet" />
     <!-- 低代码引擎的页面主题样式，可以替换为 theme-lowcode-dark -->
     <link href="https://alifd.alicdn.com/npm/@alifd/theme-lowcode-light@0.2.1/variables.css" rel="stylesheet" />
     <link href="https://alifd.alicdn.com/npm/@alifd/theme-lowcode-light@0.2.1/dist/next.var.min.css" rel="stylesheet" />
     <!-- 低代码引擎的页面框架样式 -->
-    <link rel="stylesheet" href="https://uipaas-assets.com/prod/npm/@alilc/lowcode-engine/1.1.3-beta.7/dist/css/engine-core.css" />
+    <link rel="stylesheet" href="https://uipaas-assets.com/prod/npm/@alilc/lowcode-engine/1.1.6/dist/css/engine-core.css" />
     <!-- 低代码引擎官方扩展的样式 -->
-    <link rel="stylesheet" href="https://uipaas-assets.com/prod/npm/@alilc/lowcode-engine-ext/1.0.5/dist/css/engine-ext.css" />
+    <link rel="stylesheet" href="https://uipaas-assets.com/prod/npm/@alilc/lowcode-engine-ext/1.0.6-beta.23/dist/css/engine-ext.css" />
 
     <!-- React，可替换为 production 包 -->
     <script src="https://g.alicdn.com/code/lib/react/16.14.0/umd/react.production.min.js"></script>
@@ -29,9 +29,9 @@
     <!-- Fusion Next 的主包，低代码编辑器的依赖 -->
     <script src="https://g.alicdn.com/code/lib/alifd__next/1.23.24/next.min.js"></script>
     <!-- 低代码引擎的主包 -->
-    <script crossorigin="anonymous" src="https://uipaas-assets.com/prod/npm/@alilc/lowcode-engine/1.1.3-beta.7/dist/js/engine-core.js"></script>
+    <script crossorigin="anonymous" src="https://uipaas-assets.com/prod/npm/@alilc/lowcode-engine/1.1.6/dist/js/engine-core.js"></script>
     <!-- 低代码引擎官方扩展的主包 -->
-    <script crossorigin="anonymous" src="https://uipaas-assets.com/prod/npm/@alilc/lowcode-engine-ext/1.0.5/dist/js/engine-ext.js"></script>
+    <script crossorigin="anonymous" src="https://uipaas-assets.com/prod/npm/@alilc/lowcode-engine-ext/1.0.6-beta.23/dist/js/engine-ext.js"></script>
     <script>
       console.log(
         '%c AliLowCodeEngineDemo %c v<%= version %> ',
@@ -40,7 +40,7 @@
       );
     </script>
      <!-- Fusion Next 的主包，低代码编辑器的依赖 -->
-     <script src="/script/config.js"></script>
+     <script src="./script/config.js"></script>
   </head>
 
   <body>
