增加aos动画，增加aos设置器，增加表单设计逻辑

--- a/src/plugins/plugin-adv-component-pane/src/components/Tab/index.module.scss
+++ b/src/plugins/plugin-adv-component-pane/src/components/Tab/index.module.scss
@@ -1,3 +1,12 @@
+.medium {
+  .list-sidebar {
+    width: 110px;
+  }
+  .list-content {
+    flex: 1;
+  }
+}
+
 .tab {
   display: flex;
   flex-direction: column;
